Imported Java code from the JPMML-SkLearn project

--- a/src/main/resources/META-INF/python2pmml.properties
+++ b/src/main/resources/META-INF/python2pmml.properties
@@ -11,6 +11,7 @@ numpy.random.__RandomState_ctor = numpy.random.RandomState
 numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
 pandas.core.internals.BlockManager = pandas.core.BlockManager
+pandas._libs.missing.NA = null
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.csr.csr_matrix = scipy.sparse.CSRMatrix
 sklearn.externals.joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
