Impprted Java code from the JPMML-StatsModels project

--- a/src/main/resources/META-INF/python2pmml.properties
+++ b/src/main/resources/META-INF/python2pmml.properties
@@ -10,7 +10,8 @@ numpy.ma.core._mareconstruct = numpy.core.MaskedArray
 numpy.random.__RandomState_ctor = numpy.random.RandomState
 numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
-pandas.core.internals.BlockManager = pandas.core.BlockManager
+pandas.core.frame.DataFrame = pandas.core.DataFrame
+pandas.core.internals.(|managers.)BlockManager = pandas.core.BlockManager
 pandas._libs.missing.NA = null
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.csr.csr_matrix = scipy.sparse.CSRMatrix
