Imported Java code from the JPMML-SkLearn project

--- a/src/main/resources/META-INF/python2pmml.properties
+++ b/src/main/resources/META-INF/python2pmml.properties
@@ -12,6 +12,8 @@ numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
 pandas.core.frame.DataFrame = pandas.core.DataFrame
 pandas.core.internals.(|managers.)BlockManager = pandas.core.BlockManager
+pandas.core.internals.managers.SingleBlockManager = pandas.core.SingleBlockManager
+pandas.core.series.Series = pandas.core.Series
 pandas._libs.missing.NA = null
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.csr.csr_matrix = scipy.sparse.CSRMatrix
