Improved support for string slicing expressions

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jpmml</groupId>
+			<artifactId>pmml-evaluator-testing</artifactId>
+			<version>1.5.15</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
