Fixed Javadoc errors

--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,6 @@
 				<version>3.2.0</version>
 				<configuration>
 					<javadocVersion>1.8</javadocVersion>
-					<sourcepath>${basedir}/src/main/java</sourcepath>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -170,6 +169,7 @@
 				<version>2.6</version>
 				<executions>
 					<execution>
+						<phase>generate-sources</phase>
 						<goals>
 							<goal>javacc</goal>
 						</goals>
@@ -182,6 +182,27 @@
 						<version>7.0.10</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<replace
+									file="${basedir}/target/generated-sources/javacc/org/jpmml/python/Provider.java"
+									token="@param length" 
+									value="@param len"
+								/>
+							</target>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
