--- a/src/main/resources/META-INF/python2pmml.properties
+++ b/src/main/resources/META-INF/python2pmml.properties
@@ -1,6 +1,7 @@
 builtins.getattr = builtins.GetAttr
 builtins.slice = builtins.Slice
 collections.defaultdict = collections.DefaultDict
+functools.partial = functools.Partial
 joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
 numpy.(|core.fromnumeric.)clip = numpy.core.Function
 numpy.(|core._multiarray_umath.)(absolute|arccos|arcsin|arctan|arctan2|ceil|clip|cos|cosh|degrees|rad2deg|exp|expm1|floor|fmax|fmin|hypot|log|log1p|log10|negative|power|radians|deg2rad|reciprocal|rint|sign|sin|sinh|sqrt|square|tan|tanh) = numpy.core.Function
