Ensured compatibility with Pandas 1.3.1

--- a/src/main/resources/META-INF/python2pmml.properties
+++ b/src/main/resources/META-INF/python2pmml.properties
@@ -15,6 +15,7 @@ numpy.random.__RandomState_ctor = numpy.random.RandomState
 numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
 pandas.core.frame.DataFrame = pandas.core.DataFrame
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
+pandas.core.internals.blocks.new_block = pandas.core.Block
 pandas.core.internals.(|managers.)BlockManager = pandas.core.BlockManager
 pandas.core.internals.managers.SingleBlockManager = pandas.core.SingleBlockManager
 pandas.core.series.Series = pandas.core.Series
