--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.jpmml</groupId>
-			<artifactId>jpmml-converter</artifactId>
-			<version>1.4.10</version>
+			<artifactId>pmml-converter</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -61,16 +61,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
+			<groupId>org.jpmml</groupId>
+			<artifactId>pmml-converter-testing</artifactId>
+			<version>1.5.0</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>org.jpmml</groupId>
-			<artifactId>pmml-evaluator-testing</artifactId>
-			<version>1.5.16</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
