Improved build configuration

--- a/pmml-python/pom.xml
+++ b/pmml-python/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>jar</packaging>
 
 	<name>JPMML Python converter</name>
-	<description>JPMML Python to class model converter</description>
+	<description>JPMML Python to PMML converter</description>
 
 	<licenses>
 		<license>
