--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -20,6 +20,7 @@ pandas.core.internals.(|managers.)BlockManager = pandas.core.BlockManager
 pandas.core.internals.managers.SingleBlockManager = pandas.core.SingleBlockManager
 pandas.core.series.Series = pandas.core.Series
 pandas._libs.missing.NA = null
+pandas._libs.internals._unpickle_block = pandas.core.Block
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.csr.csr_matrix = scipy.sparse.CSRMatrix
 sklearn.externals.joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
