--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -13,14 +13,17 @@ numpy.dtype = numpy.DType
 numpy.ma.core._mareconstruct = numpy.core.MaskedArray
 numpy.random.__RandomState_ctor = numpy.random.RandomState
 numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
+pandas.core.arrays.categorical.Categorical = pandas.core.Categorical
+pandas.core.dtypes.dtypes.CategoricalDtype = pandas.core.CategoricalDtype
 pandas.core.frame.DataFrame = pandas.core.DataFrame
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
 pandas.core.internals.blocks.new_block = pandas.core.Block
 pandas.core.internals.(|managers.)BlockManager = pandas.core.BlockManager
 pandas.core.internals.managers.SingleBlockManager = pandas.core.SingleBlockManager
 pandas.core.series.Series = pandas.core.Series
-pandas._libs.missing.NA = null
+pandas._libs.arrays.__pyx_unpickle_NDArrayBacked = pandas.NDArrayBacked
 pandas._libs.internals._unpickle_block = pandas.core.Block
+pandas._libs.missing.NA = null
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.csr.csr_matrix = scipy.sparse.CSRMatrix
 sklearn.externals.joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
