Added support for more Pandas data types

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -13,7 +13,10 @@ numpy.dtype = numpy.DType
 numpy.ma.core._mareconstruct = numpy.core.MaskedArray
 numpy.random.__RandomState_ctor = numpy.random.RandomState
 numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
+pandas.core.arrays.boolean.BooleanArray = pandas.core.MaskedArray
 pandas.core.arrays.categorical.Categorical = pandas.core.Categorical
+pandas.core.arrays.integer.IntegerArray = pandas.core.MaskedArray
+pandas.core.arrays.string_.StringArray = pandas.core.StringArray
 pandas.core.dtypes.dtypes.CategoricalDtype = pandas.core.CategoricalDtype
 pandas.core.frame.DataFrame = pandas.core.DataFrame
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
