Enabled mapping to PythonObjectConstructor classes

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -7,7 +7,7 @@ numpy.(|core.fromnumeric.)clip = numpy.core.Function
 numpy.(|core._multiarray_umath.)(absolute|arccos|arcsin|arctan|arctan2|ceil|clip|cos|cosh|degrees|rad2deg|exp|expm1|floor|fmax|fmin|hypot|log|log1p|log10|negative|power|radians|deg2rad|reciprocal|rint|sign|sin|sinh|sqrt|square|tan|tanh) = numpy.core.Function
 numpy.core.(_multiarray_umath|multiarray)._reconstruct = numpy.core.NDArray
 numpy.core.(_multiarray_umath|multiarray).scalar = numpy.core.Scalar
-numpy.core.numeric._frombuffer = numpy.core.FromBuffer
+numpy.core.numeric._frombuffer = numpy.core.FromBufferConstructor
 numpy.core._ufunc_reconstruct = numpy.core.UFunc
 numpy.dtype = numpy.DType
 numpy.ma.core._mareconstruct = numpy.core.MaskedArray
