Improved support for constant data types

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -1,12 +1,12 @@
 builtins.getattr = builtins.GetAttr
 builtins.slice = builtins.Slice
-builtins.(bool|float|int|str) = builtins.Type
+builtins.(bool|float|int|str) = builtins.TypeConstructor
 collections.defaultdict = collections.DefaultDict
 functools.partial = functools.Partial
 joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
 numpy.(|core.fromnumeric.)clip = numpy.core.Function
 numpy.(|core._multiarray_umath.)(absolute|arccos|arcsin|arctan|arctan2|ceil|clip|cos|cosh|degrees|rad2deg|exp|expm1|floor|fmax|fmin|hypot|log|log1p|log10|negative|power|radians|deg2rad|reciprocal|rint|sign|sin|sinh|sqrt|square|tan|tanh) = numpy.core.Function
-numpy.(bool_|int_|int8|int16|int32|int64|uint8|uint16|uint32|uint64|float_|float32|float64) = builtins.Type
+numpy.(bool_|float_|float32|float64|int_|int8|int16|int32|int64|str_|uint8|uint16|uint32|uint64) = builtins.TypeConstructor
 numpy.core.(_multiarray_umath|multiarray)._reconstruct = numpy.core.NDArray
 numpy.core.(_multiarray_umath|multiarray).scalar = numpy.core.Scalar
 numpy.core.numeric._frombuffer = numpy.core.FromBufferConstructor
