Imported Java code from the JPMML-SkLearn project

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -34,7 +34,7 @@ pandas._libs.arrays.__pyx_unpickle_NDArrayBacked = pandas.NDArrayBacked
 pandas._libs.internals._unpickle_block = pandas.core.Block
 pandas._libs.missing.NA = null
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
-scipy.sparse.csr.csr_matrix = scipy.sparse.CSRMatrix
+scipy.sparse.(_csr|csr).csr_matrix = scipy.sparse.CSRMatrix
 sklearn.externals.joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
 treelib.tree.Tree = treelib.Tree
 treelib.node.Node = treelib.Node
