Added support for Numpy random number generators

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -14,6 +14,8 @@ numpy.core._ufunc_reconstruct = numpy.core.UFunc
 numpy.dtype = numpy.DType
 numpy.ma.core._mareconstruct = numpy.core.MaskedArray
 numpy.random.__RandomState_ctor = numpy.random.RandomState
+numpy.random._pickle.__bit_generator_ctor = numpy.random.BitGenerator
+numpy.random._pickle.__generator_ctor = numpy.random.Generator
 numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
 pandas.core.arrays.boolean.BooleanArray = pandas.core.MaskedArray
 pandas.core.arrays.boolean.BooleanDtype = pandas.core.BooleanDtype
