Imported Java code from the JPMML-StatsModels project

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -37,6 +37,8 @@ pandas._libs.internals._unpickle_block = pandas.core.Block
 pandas._libs.missing.NA = null
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.(_csr|csr).csr_matrix = scipy.sparse.CSRMatrix
+scipy.stats._continuous_distns.logistic_gen = scipy.stats.RVContinuous
+scipy.stats._continuous_distns.norm_gen = scipy.stats.RVContinuous
 sklearn.externals.joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
 treelib.tree.Tree = treelib.Tree
 treelib.node.Node = treelib.Node
