--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -4,6 +4,7 @@ builtins.(bool|float|int|str) = builtins.TypeConstructor
 collections.defaultdict = collections.DefaultDict
 functools.partial = functools.Partial
 joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
+math.(acos|asin|atan|atan2|ceil|copysign|cos|cosh|degrees|exp|expm1|fabs|floor|hypot|isnan|log|log1p|log10|pow|radians|sin|sinh|sqrt|tan|tanh|trunc) = builtins.Function
 numpy.(|core.fromnumeric.)clip = numpy.core.Function
 numpy.(|core._multiarray_umath.)(absolute|arccos|arcsin|arctan|arctan2|ceil|clip|cos|cosh|degrees|rad2deg|exp|expm1|floor|fmax|fmin|hypot|log|log1p|log10|negative|power|radians|deg2rad|reciprocal|rint|sign|sin|sinh|sqrt|square|tan|tanh) = numpy.core.Function
 numpy.(bool_|float_|float32|float64|int_|int8|int16|int32|int64|str_|uint8|uint16|uint32|uint64) = builtins.TypeConstructor
