--- a/pmml-python/pom.xml
+++ b/pmml-python/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jpmml</groupId>
 		<artifactId>jpmml-python</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1.15</version>
 	</parent>
 
 	<groupId>org.jpmml</groupId>
