--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -3,6 +3,10 @@ builtins.slice = builtins.Slice
 builtins.(bool|float|int|str) = builtins.TypeConstructor
 collections.defaultdict = collections.DefaultDict
 dill._dill._create_array = dill.CreateArrayConstructor
+dill._dill._create_code = dill.CreateCodeConstructor
+dill._dill._create_function = dill.CreateFunctionConstructor
+dill._dill._create_type = dill.CreateTypeConstructor
+dill._dill._load_type = dill.LoadTypeConstructor
 functools.partial = functools.Partial
 joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
 math.(acos|asin|atan|atan2|ceil|copysign|cos|cosh|degrees|exp|expm1|fabs|floor|hypot|isnan|log|log1p|log10|pow|radians|sin|sinh|sqrt|tan|tanh|trunc) = builtins.Function
@@ -44,3 +48,4 @@ scipy.stats._continuous_distns.norm_gen = scipy.stats.RVContinuous
 sklearn.externals.joblib.numpy_pickle.NumpyArrayWrapper = joblib.NumpyArrayWrapper
 treelib.tree.Tree = treelib.Tree
 treelib.node.Node = treelib.Node
+types.MethodType = types.MethodTypeConstructor
