Added support for more Pandas data types

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -26,6 +26,8 @@ numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
 pandas.core.arrays.boolean.BooleanArray = pandas.core.MaskedArray
 pandas.core.arrays.boolean.BooleanDtype = pandas.core.BooleanDtype
 pandas.core.arrays.categorical.Categorical = pandas.core.Categorical
+pandas.core.arrays.floating.Float32Dtype = pandas.core.Float32Dtype
+pandas.core.arrays.floating.Float64Dtype = pandas.core.Float64Dtype
 pandas.core.arrays.integer.IntegerArray = pandas.core.MaskedArray
 pandas.core.arrays.integer.(Int8Dtype|Int16Dtype|Int32Dtype|Int64Dtype) = pandas.core.IntegerDtype
 pandas.core.arrays.integer.(UInt8Dtype|UInt16Dtype|UInt32Dtype|UInt64Dtype) = pandas.core.IntegerDtype
