--- a/pmml-python/pom.xml
+++ b/pmml-python/pom.xml
@@ -23,6 +23,10 @@
 		</license>
 	</licenses>
 
+	<properties>
+		<project.build.outputTimestamp>2024-04-02T09:00:00Z</project.build.outputTimestamp>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.jpmml</groupId>
@@ -134,7 +138,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>javacc-maven-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
