--- a/pmml-python-testing/pom.xml
+++ b/pmml-python-testing/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jpmml</groupId>
 		<artifactId>jpmml-python</artifactId>
-		<version>1.2.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jpmml</groupId>
@@ -24,7 +24,7 @@
 	</licenses>
 
 	<properties>
-		<project.build.outputTimestamp>2024-04-13T18:01:25Z</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2024-04-13T18:02:05Z</project.build.outputTimestamp>
 	</properties>
 
 	<dependencies>
