--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -13,7 +13,9 @@ math.(acos|asin|atan|atan2|ceil|copysign|cos|cosh|degrees|exp|expm1|fabs|floor|h
 numpy.(|core.fromnumeric.)clip = numpy.core.Function
 numpy.(|_core._multiarray_umath.|core._multiarray_umath.)(absolute|arccos|arcsin|arctan|arctan2|ceil|clip|cos|cosh|degrees|rad2deg|exp|expm1|floor|fmax|fmin|hypot|log|log1p|log10|negative|power|radians|deg2rad|reciprocal|rint|sign|sin|sinh|sqrt|square|tan|tanh) = numpy.core.Function
 numpy.(bool_|float_|float32|float64|int_|int8|int16|int32|int64|str_|uint8|uint16|uint32|uint64) = builtins.TypeConstructor
+numpy._core.multiarray._reconstruct = numpy.core.NDArray
 numpy.core.(_multiarray_umath|multiarray)._reconstruct = numpy.core.NDArray
+numpy._core.multiarray.scalar = numpy.core.Scalar
 numpy.core.(_multiarray_umath|multiarray).scalar = numpy.core.Scalar
 numpy.(_core|core).numeric._frombuffer = numpy.core.FromBufferConstructor
 numpy.core._ufunc_reconstruct = numpy.core.UFunc
