Updated JPMML-Converter dependency

--- a/pmml-python/pom.xml
+++ b/pmml-python/pom.xml
@@ -45,6 +45,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>failureaccess</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
