--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -29,6 +29,7 @@ numpy.random.bit_generator.__pyx_unpickle_SeedSequence = numpy.random.SeedSequen
 pandas.core.arrays.boolean.BooleanArray = pandas.core.MaskedArray
 pandas.core.arrays.boolean.BooleanDtype = pandas.core.BooleanDtype
 pandas.core.arrays.categorical.Categorical = pandas.core.Categorical
+pandas.core.arrays.datetimes.DatetimeArray = pandas.core.DatetimeArray
 pandas.core.arrays.floating.Float32Dtype = pandas.core.Float32Dtype
 pandas.core.arrays.floating.Float64Dtype = pandas.core.Float64Dtype
 pandas.core.arrays.integer.IntegerArray = pandas.core.MaskedArray
@@ -39,6 +40,7 @@ pandas.core.arrays.string_.StringDtype = pandas.core.StringDtype
 pandas.core.dtypes.dtypes.CategoricalDtype = pandas.core.CategoricalDtype
 pandas.core.frame.DataFrame = pandas.core.DataFrame
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
+pandas.core.indexes.datetimes._new_DatetimeIndex = pandas.core.Index
 pandas.core.internals.blocks.new_block = pandas.core.Block
 pandas.core.internals.(|managers.)BlockManager = pandas.core.BlockManager
 pandas.core.internals.managers.SingleBlockManager = pandas.core.SingleBlockManager
@@ -46,6 +48,7 @@ pandas.core.series.Series = pandas.core.Series
 pandas._libs.arrays.__pyx_unpickle_NDArrayBacked = pandas.NDArrayBacked
 pandas._libs.internals._unpickle_block = pandas.core.Block
 pandas._libs.missing.NA = null
+pandas._libs.tslibs.offsets.MonthBegin = pandas.tslibs.MonthOffset
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.(_csr|csr).csr_matrix = scipy.sparse.CSRMatrix
 scipy.stats._continuous_distns.logistic_gen = scipy.stats.RVContinuous
