--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jpmml</groupId>
 	<artifactId>jpmml-python</artifactId>
-	<version>1.3-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<packaging>pom</packaging>
 
 	<name>JPMML-Python</name>
@@ -41,7 +41,7 @@
 		<connection>scm:git:git@github.com:jpmml/jpmml-python.git</connection>
 		<developerConnection>scm:git:git@github.com:jpmml/jpmml-python.git</developerConnection>
 		<url>git://github.com/jpmml/jpmml-python.git</url>
-		<tag>HEAD</tag>
+		<tag>1.3.0</tag>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
@@ -52,7 +52,7 @@
 		<jdk.version>11</jdk.version>
 		<jpmml-converter.version>1.6.0</jpmml-converter.version>
 		<jpmml-evaluator.version>1.7.1</jpmml-evaluator.version>
-		<project.build.outputTimestamp>2025-01-10T20:19:54Z</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2025-02-03T10:15:47Z</project.build.outputTimestamp>
 	</properties>
 
 	<dependencyManagement>
@@ -60,12 +60,12 @@
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-python</artifactId>
-				<version>1.3-SNAPSHOT</version>
+				<version>1.3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-python-testing</artifactId>
-				<version>1.3-SNAPSHOT</version>
+				<version>1.3.0</version>
 			</dependency>
 
 			<dependency>
