--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jpmml</groupId>
 	<artifactId>jpmml-python</artifactId>
-	<version>1.3-SNAPSHOT</version>
+	<version>1.3.5</version>
 	<packaging>pom</packaging>
 
 	<name>JPMML-Python</name>
@@ -41,7 +41,7 @@
 		<connection>scm:git:git@github.com:jpmml/jpmml-python.git</connection>
 		<developerConnection>scm:git:git@github.com:jpmml/jpmml-python.git</developerConnection>
 		<url>git://github.com/jpmml/jpmml-python.git</url>
-		<tag>HEAD</tag>
+		<tag>1.3.5</tag>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
@@ -51,7 +51,7 @@
 	<properties>
 		<jpmml-converter.version>1.6.2</jpmml-converter.version>
 		<jpmml-evaluator.version>1.7.3</jpmml-evaluator.version>
-		<project.build.outputTimestamp>2025-04-12T06:48:21Z</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2025-06-21T18:18:44Z</project.build.outputTimestamp>
 	</properties>
 
 	<dependencyManagement>
@@ -59,12 +59,12 @@
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-python</artifactId>
-				<version>1.3-SNAPSHOT</version>
+				<version>1.3.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-python-testing</artifactId>
-				<version>1.3-SNAPSHOT</version>
+				<version>1.3.5</version>
 			</dependency>
 
 			<dependency>
