--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,8 @@
 	<properties>
 		<jpmml-converter.version>1.6.3</jpmml-converter.version>
 		<jpmml-evaluator.version>1.7.5</jpmml-evaluator.version>
+		<pickle.version>1.5</pickle.version>
+		<serpent.version>1.40</serpent.version>
 		<project.build.outputTimestamp>2025-06-21T18:19:09Z</project.build.outputTimestamp>
 	</properties>
 
@@ -92,12 +94,12 @@
 			<dependency>
 				<groupId>net.razorvine</groupId>
 				<artifactId>pickle</artifactId>
-				<version>1.5</version>
+				<version>${pickle.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.razorvine</groupId>
 				<artifactId>serpent</artifactId>
-				<version>1.40</version>
+				<version>${serpent.version}</version>
 			</dependency>
 
 			<!-- Inherited from com.google.guava:guava via org.jpmml:pmml-converter dependency -->
