--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -36,7 +36,7 @@ pandas.core.arrays.integer.IntegerArray = pandas.core.MaskedArray
 pandas.core.arrays.integer.(Int8Dtype|Int16Dtype|Int32Dtype|Int64Dtype) = pandas.core.IntegerDtype
 pandas.core.arrays.integer.(UInt8Dtype|UInt16Dtype|UInt32Dtype|UInt64Dtype) = pandas.core.IntegerDtype
 pandas.core.arrays.string_.StringArray = pandas.core.StringArray
-pandas.core.arrays.string_.StringDtype = pandas.core.StringDtype
+pandas.core.arrays.string_.StringDtype = pandas.core.StringDtypeConstructor
 pandas.core.dtypes.dtypes.CategoricalDtype = pandas.core.CategoricalDtype
 pandas.core.frame.DataFrame = pandas.core.DataFrame
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
