--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -1,4 +1,5 @@
 builtins.getattr = builtins.GetAttr
+builtins.setattr = builtins.SetAttrConstructor
 builtins.slice = builtins.Slice
 builtins.(bool|float|int|str) = builtins.TypeConstructor
 collections.defaultdict = collections.DefaultDict
