Refactored support for 'builtins.getattr' function

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -1,4 +1,4 @@
-builtins.getattr = builtins.GetAttr
+builtins.getattr = builtins.GetAttrConstructor
 builtins.setattr = builtins.SetAttrConstructor
 builtins.slice = builtins.Slice
 builtins.(bool|float|int|str) = builtins.TypeConstructor
