Added support for 'builtins.object' type

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -1,4 +1,5 @@
 builtins.getattr = builtins.GetAttrConstructor
+builtins.object = net.razorvine.pickle.objects.ClassDictConstructor
 builtins.setattr = builtins.SetAttrConstructor
 builtins.slice = builtins.Slice
 builtins.(bool|float|int|str) = builtins.TypeConstructor
