Ensured compatibility with Pandas 3.0(.0)

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -28,29 +28,33 @@ numpy.random._pickle.__bit_generator_ctor = numpy.random.BitGenerator
 numpy.random._pickle.__generator_ctor = numpy.random.Generator
 numpy.random._pickle.__randomstate_ctor = numpy.random.LegacyRandomState
 numpy.random.bit_generator.__pyx_unpickle_SeedSequence = numpy.random.SeedSequence
-pandas.core.arrays.boolean.BooleanArray = pandas.core.MaskedArray
-pandas.core.arrays.boolean.BooleanDtype = pandas.core.BooleanDtype
-pandas.core.arrays.categorical.Categorical = pandas.core.Categorical
+pandas.arrays.ArrowStringArray = pandas.ArrowStringArray
+pandas.(arrays.|core.arrays.boolean.)BooleanArray = pandas.core.MaskedArray
+pandas.(|core.arrays.boolean.)BooleanDtype = pandas.core.BooleanDtype
+pandas.(|core.arrays.categorical.)Categorical = pandas.core.Categorical
 pandas.core.arrays.datetimes.DatetimeArray = pandas.core.DatetimeArray
-pandas.core.arrays.floating.Float32Dtype = pandas.core.Float32Dtype
-pandas.core.arrays.floating.Float64Dtype = pandas.core.Float64Dtype
-pandas.core.arrays.integer.IntegerArray = pandas.core.MaskedArray
-pandas.core.arrays.integer.(Int8Dtype|Int16Dtype|Int32Dtype|Int64Dtype) = pandas.core.IntegerDtype
-pandas.core.arrays.integer.(UInt8Dtype|UInt16Dtype|UInt32Dtype|UInt64Dtype) = pandas.core.IntegerDtype
-pandas.core.arrays.string_.StringArray = pandas.core.StringArray
-pandas.core.arrays.string_.StringDtype = pandas.core.StringDtypeConstructor
-pandas.core.dtypes.dtypes.CategoricalDtype = pandas.core.CategoricalDtype
-pandas.core.frame.DataFrame = pandas.core.DataFrame
+pandas.(|core.arrays.floating.)Float32Dtype = pandas.core.Float32Dtype
+pandas.(|core.arrays.floating.)Float64Dtype = pandas.core.Float64Dtype
+pandas.(arrays.|core.arrays.integer.)IntegerArray = pandas.core.MaskedArray
+pandas.(|core.arrays.integer.)(Int8Dtype|Int16Dtype|Int32Dtype|Int64Dtype) = pandas.core.IntegerDtype
+pandas.(|core.arrays.integer.)(UInt8Dtype|UInt16Dtype|UInt32Dtype|UInt64Dtype) = pandas.core.IntegerDtype
+pandas.(arrays.|core.arrays.string_.)StringArray = pandas.core.StringArray
+pandas.(|core.arrays.string_.)StringDtype = pandas.core.StringDtypeConstructor
+pandas.(|core.dtypes.dtypes.)CategoricalDtype = pandas.core.CategoricalDtype
+pandas.(|core.frame.)DataFrame = pandas.core.DataFrame
 pandas.core.indexes.base.(_new_Index|Index) = pandas.core.Index
 pandas.core.indexes.datetimes._new_DatetimeIndex = pandas.core.Index
 pandas.core.internals.blocks.new_block = pandas.core.Block
 pandas.core.internals.(|managers.)BlockManager = pandas.core.BlockManager
 pandas.core.internals.managers.SingleBlockManager = pandas.core.SingleBlockManager
-pandas.core.series.Series = pandas.core.Series
+pandas.(|core.series.)Series = pandas.core.Series
 pandas._libs.arrays.__pyx_unpickle_NDArrayBacked = pandas.NDArrayBacked
 pandas._libs.internals._unpickle_block = pandas.core.Block
-pandas._libs.missing.NA = null
+pandas.(|_libs.missing.)NA = null
 pandas._libs.tslibs.offsets.MonthBegin = pandas.tslibs.MonthOffset
+pyarrow.lib._restore_array = pyarrow.Array
+pyarrow.lib.py_buffer = pyarrow.Buffer
+pyarrow.lib.type_for_alias = pyarrow.lib.TypeForAliasConstructor
 scipy.interpolate._bsplines.BSpline = scipy.interpolate.BSpline
 scipy.sparse.(_csr|csr).csr_matrix = scipy.sparse.CSRMatrix
 scipy.stats._continuous_distns.logistic_gen = scipy.stats.RVContinuous
