Expanded commit d01d49eb3c

--- a/pmml-python/src/main/resources/META-INF/python2pmml.properties
+++ b/pmml-python/src/main/resources/META-INF/python2pmml.properties
@@ -32,7 +32,7 @@ pandas.arrays.ArrowStringArray = pandas.ArrowStringArray
 pandas.(arrays.|core.arrays.boolean.)BooleanArray = pandas.core.MaskedArray
 pandas.(|core.arrays.boolean.)BooleanDtype = pandas.core.BooleanDtype
 pandas.(|core.arrays.categorical.)Categorical = pandas.core.Categorical
-pandas.core.arrays.datetimes.DatetimeArray = pandas.core.DatetimeArray
+pandas.(arrays.|core.arrays.datetimes.)DatetimeArray = pandas.core.DatetimeArray
 pandas.(|core.arrays.floating.)Float32Dtype = pandas.core.Float32Dtype
 pandas.(|core.arrays.floating.)Float64Dtype = pandas.core.Float64Dtype
 pandas.(arrays.|core.arrays.integer.)IntegerArray = pandas.core.MaskedArray
